feature image added, slider problem fixed!

--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -112,3 +112,16 @@ mixin PlanTitle (_iteration)
 		"skype",
 		"gmail"
 	]
+
+
+-
+	var features_data = [
+		["wordpress" , "Hosting optimized for WordPress performance."],
+		["joomla!" , "Hosting for Joomla..."],
+		["magento" , "Magento xaxakvdfsjdf"],
+		["php" , "php xaxakvdfsjdf"],
+		["phpmyadmin" , "phpmyadmin xaxakvdfsjdf"],
+		["email" , "Magento xaxakvdfsjdf"],
+		["ecommerce" , "Magento xaxakvdfsjdf"],
+		["mysql" , "Magento xaxakvdfsjdf"]
+	]
