--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -34,6 +34,7 @@ img
 @import "includes/header"
 @import "includes/banner"
 @import "includes/plans"
+@import "includes/feature"
 @import "includes/review"
 
 
