updated feature,service,migration sections with css

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -19,6 +19,6 @@ html(lang="en")
 		include templates/sections/_site_migration
 		include templates/sections/_detailed_plan_table
 		include templates/sections/_service
-		include templates/sections/_review
+		//include templates/sections/_review
 
 		include templates/_footer
