--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -10,7 +10,7 @@
 -var mainJS5 = "../src/js/main.js"
 -var mainJS = "scripts/scripts.min.js"	//- main javascript
 
--var googleFont = '//fonts.googleapis.com/css?family=Lato:400,400i|Ubuntu:400,700'
+-var googleFont = '//fonts.googleapis.com/css?family=Roboto+Slab:400,700|Ubuntu:400,700'
 
 -var logoUrl = "img/logo.jpg"
 
@@ -52,7 +52,7 @@ mixin PlanTitle (_iteration)
 		.plan-chart
 			-for (_j=0; _j<3; _j++)
 				span
-			h3.text-uppercase= planType[_iteration]
+		h3.text-uppercase= planType[_iteration]
 
 
 //- customer's data
