--- a/src/jade/templates/sections/_detailed_plan_table.jade
+++ b/src/jade/templates/sections/_detailed_plan_table.jade
@@ -1,7 +1,7 @@
 section#detailed-plan
 	.container
-		.row.text-center
-			table
+		.row.text-center.plan-table-parent
+			table.table.table-striped.table-bordered
 				tr
 					-for (i=0; i<4; i++)
 						th.text-center
