--- a/src/jade/templates/sections/_feature.jade
+++ b/src/jade/templates/sections/_feature.jade
@@ -1,10 +1,9 @@
-section#features
+section#features.mt-50
 	.container
 		.heading.text-center
-			.row
-				h1.text-uppercase features
-				p Essential functionality covered by a single service
-		.content
+			h1.text-uppercase features
+			p Essential functionality covered by a single service
+		.content.mt-50
 			.row.text-center
 				each feat in features_data
 					.col-xs-6.col-md-3
