--- a/src/sass/includes/_coloring.sass
+++ b/src/sass/includes/_coloring.sass
@@ -24,6 +24,11 @@ li.anim-slide h1
 		color: $white
 	.navbar-default
 		background-color: $_primary
+	.txt-color
+		color: $_base-2
+	.plan-chart
+		span
+			background-color: $_primary
 	#main-menu
 		.navbar-nav
 			li>a
@@ -52,9 +57,6 @@ li.anim-slide h1
 				background-color: $_base-1
 			.small-plan-badge:before, .small-plan-badge:after
 				border-bottom-color: $_base-1
-		.plan-chart
-			span
-				background-color: $_primary
 		.small-plan-price
 			color: $_base-1
 
