--- a/src/sass/includes/_feature.sass
+++ b/src/sass/includes/_feature.sass
@@ -1,2 +1,9 @@
-.each-feature img
-	width: 150px
+.each-feature
+	margin-bottom: 25px
+	img
+		width: 75px
+		
+@media (min-width: 992px)
+	.each-feature
+		img
+			width: 150px
