--- a/src/jade/templates/sections/_service.jade
+++ b/src/jade/templates/sections/_service.jade
@@ -1,10 +1,9 @@
 section#service
 	.container
-		.row
-			.heading.text-center
-				h1.text-uppercase why choose us
-				p Shared Hosting That's Better Than Our Competition
-		.row
+		.heading.text-center
+			h1.text-uppercase why choose us
+			p Shared Hosting That's Better Than Our Competition
+		.row.mt-50.all-services
 			-for (i=0; i<8; i++)
 				.col-md-6
 					.row
