--- a/src/jade/templates/sections/_site_migration.jade
+++ b/src/jade/templates/sections/_site_migration.jade
@@ -1,35 +1,34 @@
-section#site-migration
+section#site-migration.mt-50
 	.container
-		.row
-			.heading.text-center
-				h1.text-uppercase Hassle-Free Website Migration
-				p Enjoy the peace of mind of our expert staff handling your migration needs
-		.row
-			.col-md-3
+		.heading.text-center
+			h1.text-uppercase Hassle-Free Website Migration
+			p Enjoy the peace of mind of our expert staff handling your migration needs
+		.row.mt-50
+			.hidden-xs.hidden-sm.col-md-2.col-md-offset-1.text-right
 				.migration-map-img
 					img(src= mainImgUrl)
-			.col-md-5
+			.col-md-4
 				.migration-details
-					h4 What We Migrate For You
-					ul
+					h4.txt-color What We Migrate For You
+					ul.nav
 						each value in migrationImageData
 							li
 								img(src= value['imgUrl'])
 								span= value['title']
-			.col-md-4
+			.col-md-5
 				.how-migrate
-					h4 How it works
-					ul.how-migrate-lists
+					h4.txt-color How it works
+					ul.how-migrate-lists.nav
 						li 1.&nbsp; Purchase a Hosting Plan
 						li 2.&nbsp; Submit the Transfer Request Form
 						li 3.&nbsp; Wait for Completion
 				.start-migrate
-					h4.text-capitalize get started
+					h4.txt-color.text-capitalize get started
 					a.btn.btn-primary(href="#") choose a plan
 				.question-about-migrate
-					h4 Questions?
+					h4.txt-color Questions?
 					a.btn.btn-primary(href="#") call us
-		.row.text-center
+		.text-center
 			p.email-migration
 				sup *
 				|Email accounts only included with cPanel migrations. Non-cPanel migrations may require email to be manually migrated.
