--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -6,7 +6,7 @@ body
 	overflow-x: hidden
 
 h1, h2, h3, h4, h5, h6
-	font-family: 'Lato', sans-serif
+	font-family: 'Roboto Slab', sans-serif
 
 a, button
 	outline: none !important
@@ -35,6 +35,8 @@ img
 @import "includes/banner"
 @import "includes/plans"
 @import "includes/feature"
+@import "includes/migration"
+@import "includes/service"
 @import "includes/review"
 
 
