stable (need rework in banner-slider and main-menu)

--- a/src/jade/templates/_footer.jade
+++ b/src/jade/templates/_footer.jade
@@ -2,15 +2,15 @@ footer
 	.container
 		.row
 			.col-md-6
-				.copyright
+				.copyright.text-center
 					p  All rights reserved to&nbsp
 						span	copyright © 2017&nbsp
 							a(href="mailto:contact@conciitus.com").text-capitalize concitus
-			.col-md-6
-				ul
+			.col-md-6.text-center
+				ul.nav
 					each _social in social_links
 						li
-							a(href="#")
+							a.transition(href="#")
 								i(class="fa fa-#{_social}")
 
 script(src=mainJS)
