--- a/src/jade/templates/sections/_pricing_small.jade
+++ b/src/jade/templates/sections/_pricing_small.jade
@@ -1,4 +1,4 @@
-section#small-pricing.mt-50
+section#small-pricing
 	//- small pricing doesn't mean low costing plan/pricing, it's the size !!
 	.container
 		.row.text-center
