--- a/src/sass/includes/_header.sass
+++ b/src/sass/includes/_header.sass
@@ -20,13 +20,15 @@ $top-most-nav-height: 70px
 
 #main-menu
 	.navbar-nav
-		li
+		//li
 			padding: 10px 5px
 		li>a
-			padding: 6px 10px
-			border: 1px solid transparent
-			border-radius: 3px
-
+			margin: 9px 8px
+			padding: 9px 5px
+		
+		//border: none !important
+			
+			
 @media (min-width: 768px)
 	.top-most-menu
 		.navbar-brand
