--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -20,7 +20,7 @@ img
 .btn, .btn-default
 	border: none
 
-.transition
+.transition, .btn
 	-webkit-transition: all 0.3s
 	-moz-transition: all 0.3s
 	-ms-transition: all 0.3s
@@ -38,6 +38,7 @@ img
 @import "includes/migration"
 @import "includes/service"
 @import "includes/review"
+@import "includes/footer"
 
 
 
