color system updated for later usage

--- a/src/sass/includes/__colors.sass
+++ b/src/sass/includes/__colors.sass
@@ -5,32 +5,10 @@ $dark-gray: #aab2bd
 $darker-gray: #656d78
 $darkest-gray: #434a54
 
-$orange-light: #fc6e51
-$orange-dark: #ba2e10
-$orange-based-1: #37829E
-$orange-based-2: #FCAA51
-$orange-based-btn: #3BB769
 
-$yellow-light: #ffc754
-$yellow-dark: #bf8611
-$yellow-based-1: #4562AB
-$yellow-based-2: #ffe354
-$yellow-based-btn: #6147AF
+//colors list: (light, dark, base-1, base-2, btn)
+$colors-list: ('orange': (#fc6e51, #ba2e10, #37829E, #FCAA51, #3BB769), 'yellow': (#ffc754, #bf8611, #4562AB, #ffe354, #6147AF), 'green': (#a0d468, #5c9221, #ea8e73, #51a679, #914D9A), 'mint': (#48cfad, #05aa81, #ffc059, #548AD0, #ff9759), 'aqua': (#30A8CC, #047393, #ffc335, #415dd4, #ff9b35), 'test': (#dbdfef, #fadb12, #3ada56, #2aba35, #ebe263))
+//*****READ MUST*********
+	adding new colors need a modification in _theme.jade file
+		in this format: button.btn.<color name>(data-color="<color name>")
 
-$green-light: #a0d468
-$green-dark: #5c9221
-$green-based-1: #ea8e73
-$green-based-2: #51a679
-$green-based-btn: #914D9A
-
-$mint-light: #48cfad
-$mint-dark: #05aa81
-$mint-based-1: #ffc059
-$mint-based-2: #548AD0
-$mint-based-btn: #ff9759
-
-$aqua-light: #30A8CC
-$aqua-dark: #047393
-$aqua-based-1: #ffc335
-$aqua-based-2: #415dd4
-$aqua-based-btn: #ff9b35
