--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -4,9 +4,9 @@
 
 -var mainJS0 = "../src/js/1.jquery-3.1.1.min.js"
 -var mainJS1 = "../src/js/2.jquery-migrate-3.0.0.min.js"
--var mainJS2 = "../src/js/4.jquery.bootstrap.min.js"
--var mainJS3 = "../src/js/3.jquery.modernizr.js"
--var mainJS4 = "../src/js/5.jquery.animateSlider.js"
+-var mainJS2 = "../src/js/3.jquery.bootstrap.min.js"
+-var mainJS3 = "../src/js/4.jquery.fractionslider.min.js"
+//-var mainJS4 = "../src/js/5.jquery.animateSlider.js"
 -var mainJS5 = "../src/js/main.js"
 -var mainJS = "scripts/scripts.min.js"	//- main javascript
 
