--- a/src/jade/templates/sections/_pricing_small.jade
+++ b/src/jade/templates/sections/_pricing_small.jade
@@ -3,7 +3,7 @@ section#small-pricing
 	.container
 		.row.text-center
 			each badge_txt in [["","launch"], ["Top Seller","power"], ["Best value","pro"]]
-				.col-md-4
+				.col-sm-4.each-small-plan-parent
 					.each-small-pricing
 						.small-plan-badge.text-center
 							span= badge_txt[0]
