--- a/src/sass/includes/_banner.sass
+++ b/src/sass/includes/_banner.sass
@@ -1,7 +1,12 @@
+#banner
+	ul
+		padding: 0
+		margin: 0
+
 
 @for $i from 1 through 3
-	.banner-slider
-		.anim-slide:nth-child(#{$i})
+	.slider
+		.slide:nth-child(#{$i})
 			background: url("../img/slider-bg-#{$i}.png")
 
 .banner-slider
