added logo change functionality

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -10,6 +10,7 @@ html(lang="en")
 		include templates/_header
 
 		include templates/extras/_theme
+		include templates/extras/_logo-changer
 		include templates/extras/_call_us
 
 
