--- a/src/jade/templates/__head.jade
+++ b/src/jade/templates/__head.jade
@@ -7,3 +7,5 @@ head
 	title=pageTitle
 	link(rel="stylesheet", href=mainCss)
 	link(rel="stylesheet", href=googleFont)
+
+	link(rel="shortcut icon", class="favicon", type="image/png", href="img/favicon/fav-1.png")
