--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,5 +1,6 @@
 @import "includes/_colors"	//color variables
-@import "includes/theme"	//theme change button work
+@import "includes/theme"	//theme changer
+@import "includes/logo-change"	//logo changer
 
 body
 	font-family: 'Ubuntu', sans-serif
