--- a/src/sass/includes/_coloring.sass
+++ b/src/sass/includes/_coloring.sass
@@ -31,6 +31,12 @@ li.anim-slide h1
 		color: $darkest-gray
 	
 =theme($_primary, $_secondary, $_base-1, $_base-2, $_btn)
+	::selection
+		background-color: $_primary
+		color: $white
+	::-moz-selection
+		background-color: $_primary
+		color: $white
 	a
 		color: $_primary
 	a:hover
