--- a/src/sass/includes/_migration.sass
+++ b/src/sass/includes/_migration.sass
@@ -1,4 +1,7 @@
 #site-migration
+	.migration-map-img
+		img
+			height: 270px
 	.migration-details
 		.nav>li
 			padding: 5px 5px
@@ -6,6 +9,7 @@
 				width: 35px
 				padding-right: 5px
 	.email-migration
+		margin-top: 20px
 		font-size: 12px
 		font-style: italic
 		
