--- a/src/sass/includes/_service.sass
+++ b/src/sass/includes/_service.sass
@@ -1,2 +1,7 @@
-.all-services>div[class^="col-md-"]
-	margin-bottom: 30px
+#service
+	.all-services>div[class^="col-md-"]
+		margin-bottom: 50px
+	.service-img-wrapper
+		text-align: right
+		img
+			width: 80px
