added static banner for testing(animated banner is not showed now)

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -33,7 +33,8 @@ img
 @import "includes/coloring"
 
 @import "includes/header"
-@import "includes/banner"
+//@import "includes/banner"
+@import "includes/banner_static"
 @import "includes/plans"
 @import "includes/feature"
 @import "includes/migration"
