--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -14,7 +14,8 @@ html(lang="en")
 		include templates/extras/_call_us
 
 
-		include templates/sections/_banner
+		//include templates/sections/_banner
+		include templates/sections/_banner-static
 		include templates/sections/_pricing_small
 		include templates/sections/_feature
 		include templates/sections/_site_migration
