--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -18,11 +18,20 @@
 
 
 //- banner data
+-var bannerMainText = "Dedicated Servers with FREE SSDs"
+-var bannerSubHeading1 = ' Get up to'
+-var bannerSubHeadingHighlighted = ' 47% OFF'
+-var bannerSubHeading3 = ' Dedicated Server'
+-var promotion1 = "dedicated servers"
+-var promotion2 = " starting at"
+-var promotionStrikedCost = ' $189.99/mo'
+-var promotionOfferedCost = " $180.09/mo"
 -
 	var offer_lists = [
-		"FAST Web Hosting with FREE SSDs",
-		"FREE 1-click installer with 400+ applications",
-		"FREE cPanel for easy server management"
+		"30-day Money-back Guarantee",
+		"99.999% Uptime Guarantee",
+		"24/7 U.S. Based Support",
+		"FREE Setup by Managed Hosting"
 	]
 
 
