added functionality for changing theme and logo

--- a/src/jade/templates/extras/_theme.jade
+++ b/src/jade/templates/extras/_theme.jade
@@ -1,4 +1,4 @@
-#theme.transition
+#theme.transition.admin-only
 	.theme-wrapper
 		button.btn.transition.change-theme
 			img(src="img/theme-icon.png")
