updated css for feature img

--- a/src/sass/includes/_feature.sass
+++ b/src/sass/includes/_feature.sass
@@ -1,9 +1,10 @@
 .each-feature
 	margin-bottom: 25px
 	img
-		width: 75px
-		
+		height: 75px
+		width: auto
+
 @media (min-width: 992px)
 	.each-feature
 		img
-			width: 150px
+			height: 150px
