changed site title

--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -1,5 +1,5 @@
 //- <head> data
--var pageTitle = "Concitus Hosting"
+-var pageTitle = "Oikik Hosting Ltd."
 -var mainCss = "style-min/main.min.css"	//- minified css file
 
 -var mainJS0 = "../src/js/1.jquery-3.1.1.min.js"
