added 1st banner

--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -18,20 +18,21 @@
 
 
 //- banner data
--var bannerMainText = "Dedicated Servers with FREE SSDs"
--var bannerSubHeading1 = ' Get up to'
--var bannerSubHeadingHighlighted = ' 47% OFF'
--var bannerSubHeading3 = ' Dedicated Server'
--var promotion1 = "dedicated servers"
+-var bannerMainText = "Your Ultimate Hight Performance SSD server"
+-var bannerSubHeading1 = ' Web Hosting made easy'
+-var bannerSubHeadingHighlighted = ''
+-var bannerSubHeading3 = ''
+-var promotion1 = "Hosting Plan"
 -var promotion2 = " starting at"
--var promotionStrikedCost = ' $189.99/mo'
--var promotionOfferedCost = " $180.09/mo"
+-var promotionStrikedCost = "  ৳ 800"
+-var promotionOfferedCost = "  ৳ 400"
 -
 	var offer_lists = [
-		"30-day Money-back Guarantee",
-		"99.999% Uptime Guarantee",
-		"24/7 U.S. Based Support",
-		"FREE Setup by Managed Hosting"
+		"99.99% Uptime",
+		"24/7/365 Support",
+		"Free Website Migration",
+		"Plesk for easier control",
+		"SSH access"
 	]
 
 
