--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -23,8 +23,8 @@
 -var bannerSubHeadingHighlighted = ''
 -var bannerSubHeading3 = ''
 -var promotion1 = "Hosting Plan"
--var promotion2 = " starting at"
--var promotionStrikedCost = "  ৳ 800"
+-var promotion2 = " starting at  "
+-var promotionStrikedCost = "৳ 800"
 -var promotionOfferedCost = "  ৳ 400"
 -
 	var offer_lists = [
@@ -41,7 +41,7 @@
 -var planType = ["", "Free", "Student", "Business"]    //-used blank in first place, because there's no heading for description
 -
 	var planData = [
-		["site", "00", "01", "02"],
+		["sitehsdgahjsdgas", "00", "01", "02"],
 		["something", "10", "11", "12"],
 		["zzz", false, false, true],
 		["amount", "5", "20", "500"],
