fixed small_pricing names

--- a/src/jade/templates/sections/_pricing_small.jade
+++ b/src/jade/templates/sections/_pricing_small.jade
@@ -2,7 +2,7 @@ section#small-pricing
 	//- small pricing doesn't mean low costing plan/pricing, it's the size !!
 	.container
 		.row.text-center
-			each badge_txt in [["","launch"], ["Top Seller","power"], ["Best value","pro"]]
+			each badge_txt in [["",planType[1]], ["Top Seller",planType[2]], ["Best value",planType[3]]]
 				.col-sm-4.each-small-plan-parent
 					.each-small-pricing
 						.small-plan-badge.text-center
